--- a/order-service/src/main/resources/application-dev.properties
+++ b/order-service/src/main/resources/application-dev.properties
@@ -3,6 +3,7 @@ server.port=8083
 #actuator config
 management.info.env.enabled=true
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 #info.env
 info.app.name=${spring.application.name}
 info.app.author=mafei
@@ -22,3 +23,15 @@ logging.level.com.example=debug
 mybatis.mapper-locations=classpath:/mybatis/mappers/*.xml
 #mybatis.type-aliases-package=com.example.orderservice.mapper
 mybatis.configuration.map-underscore-to-camel-case=true
+#resilience4j
+management.health.circuitbreakers.enabled=true
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.getMyName.register-health-indicator=true
+resilience4j.circuitbreaker.instances.getMyName.writable-stack-trace-enabled=true
+resilience4j.circuitbreaker.instances.getMyName.sliding-window-type=count_based
+resilience4j.circuitbreaker.instances.getMyName.sliding-window-size=20
+resilience4j.circuitbreaker.instances.getMyName.minimum-number-of-calls=2
+resilience4j.circuitbreaker.instances.getMyName.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.getMyName.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.getMyName.permitted-number-of-calls-in-half-open-state=2
+resilience4j.circuitbreaker.instances.getMyName.slow-call-duration-threshold=500ms
