resilience4j Bulkhead tested with SEMAPHORE.

--- a/order-service/src/main/resources/application-dev.properties
+++ b/order-service/src/main/resources/application-dev.properties
@@ -23,7 +23,7 @@ logging.level.com.example=debug
 mybatis.mapper-locations=classpath:/mybatis/mappers/*.xml
 #mybatis.type-aliases-package=com.example.orderservice.mapper
 mybatis.configuration.map-underscore-to-camel-case=true
-#resilience4j
+#resilience4j:circuitbreaker
 management.health.circuitbreakers.enabled=true
 resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.getMyName.register-health-indicator=true
@@ -35,3 +35,6 @@ resilience4j.circuitbreaker.instances.getMyName.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.getMyName.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.instances.getMyName.permitted-number-of-calls-in-half-open-state=2
 resilience4j.circuitbreaker.instances.getMyName.slow-call-duration-threshold=500ms
+#resilience4j:bulkhead
+resilience4j.bulkhead.instances.getPayment.max-concurrent-calls=20
+#resilience4j.bulkhead.instances.getPayment.max-wait-duration=2s
