resilience4j Bulkhead tested with THREADPOOL.

--- a/order-service/src/main/resources/application-dev.properties
+++ b/order-service/src/main/resources/application-dev.properties
@@ -37,4 +37,11 @@ resilience4j.circuitbreaker.instances.getMyName.permitted-number-of-calls-in-hal
 resilience4j.circuitbreaker.instances.getMyName.slow-call-duration-threshold=500ms
 #resilience4j:bulkhead
 resilience4j.bulkhead.instances.getPayment.max-concurrent-calls=20
-#resilience4j.bulkhead.instances.getPayment.max-wait-duration=2s
+resilience4j.bulkhead.instances.getPayment.max-wait-duration=2s
+#resilience4j:bulkhead:thread-pool-bulkhead
+resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.core-thread-pool-size=2
+resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.max-thread-pool-size=3
+resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.queue-capacity=5
+resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.writable-stack-trace-enabled=true
+resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.keep-alive-duration=20ms
+
