implemented CircuitBreaker inside of the service layer with fallback.

--- a/order-service/src/main/resources/application-dev.properties
+++ b/order-service/src/main/resources/application-dev.properties
@@ -35,6 +35,16 @@ resilience4j.circuitbreaker.instances.getMyName.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.getMyName.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.instances.getMyName.permitted-number-of-calls-in-half-open-state=2
 resilience4j.circuitbreaker.instances.getMyName.slow-call-duration-threshold=500ms
+#getPaymentDetail
+resilience4j.circuitbreaker.instances.getPaymentDetail.register-health-indicator=true
+resilience4j.circuitbreaker.instances.getPaymentDetail.writable-stack-trace-enabled=true
+resilience4j.circuitbreaker.instances.getPaymentDetail.sliding-window-type=count_based
+resilience4j.circuitbreaker.instances.getPaymentDetail.sliding-window-size=20
+resilience4j.circuitbreaker.instances.getPaymentDetail.minimum-number-of-calls=2
+resilience4j.circuitbreaker.instances.getPaymentDetail.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.getPaymentDetail.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.getPaymentDetail.permitted-number-of-calls-in-half-open-state=2
+resilience4j.circuitbreaker.instances.getPaymentDetail.slow-call-duration-threshold=500ms
 #resilience4j:bulkhead
 resilience4j.bulkhead.instances.getPayment.max-concurrent-calls=20
 resilience4j.bulkhead.instances.getPayment.max-wait-duration=2s
