enabled spring feign circuitbreaker and with fallback facility

--- a/order-service/src/main/resources/application-dev.properties
+++ b/order-service/src/main/resources/application-dev.properties
@@ -54,4 +54,5 @@ resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.max-thread-pool
 resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.queue-capacity=5
 resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.writable-stack-trace-enabled=true
 resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.keep-alive-duration=20ms
-
+#
+feign.circuitbreaker.enabled=true
