ignoreExceptions used [not tested]

--- a/order-service/src/main/resources/application-dev.properties
+++ b/order-service/src/main/resources/application-dev.properties
@@ -45,6 +45,7 @@ resilience4j.circuitbreaker.instances.getPaymentDetail.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.getPaymentDetail.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.instances.getPaymentDetail.permitted-number-of-calls-in-half-open-state=2
 resilience4j.circuitbreaker.instances.getPaymentDetail.slow-call-duration-threshold=500ms
+resilience4j.circuitbreaker.instances.getPaymentDetail.record-exceptions=com.example.orderservice.exception.ServerUnavailableException
 #resilience4j:bulkhead
 resilience4j.bulkhead.instances.getPayment.max-concurrent-calls=20
 resilience4j.bulkhead.instances.getPayment.max-wait-duration=2s
