docker file added for API Gateway and Eureka service

--- a/order-service/src/main/resources/application-dev.properties
+++ b/order-service/src/main/resources/application-dev.properties
@@ -26,15 +26,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #resilience4j:circuitbreaker
 management.health.circuitbreakers.enabled=true
 resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
-resilience4j.circuitbreaker.instances.getMyName.register-health-indicator=true
-resilience4j.circuitbreaker.instances.getMyName.writable-stack-trace-enabled=true
-resilience4j.circuitbreaker.instances.getMyName.sliding-window-type=count_based
-resilience4j.circuitbreaker.instances.getMyName.sliding-window-size=20
-resilience4j.circuitbreaker.instances.getMyName.minimum-number-of-calls=2
-resilience4j.circuitbreaker.instances.getMyName.failure-rate-threshold=50
-resilience4j.circuitbreaker.instances.getMyName.wait-duration-in-open-state=10s
-resilience4j.circuitbreaker.instances.getMyName.permitted-number-of-calls-in-half-open-state=2
-resilience4j.circuitbreaker.instances.getMyName.slow-call-duration-threshold=500ms
 #getPaymentDetail
 resilience4j.circuitbreaker.instances.getPaymentDetail.register-health-indicator=true
 resilience4j.circuitbreaker.instances.getPaymentDetail.writable-stack-trace-enabled=true
@@ -45,7 +36,8 @@ resilience4j.circuitbreaker.instances.getPaymentDetail.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.getPaymentDetail.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.instances.getPaymentDetail.permitted-number-of-calls-in-half-open-state=2
 resilience4j.circuitbreaker.instances.getPaymentDetail.slow-call-duration-threshold=500ms
-resilience4j.circuitbreaker.instances.getPaymentDetail.record-exceptions=com.example.orderservice.exception.ServerUnavailableException
+#resilience4j.circuitbreaker.instances.getPaymentDetail.record-exceptions=com.example.orderservice.exception.ServerUnavailableException
+resilience4j.circuitbreaker.instances.getPaymentDetail.ignore-exceptions[0]=com.example.orderservice.exception.OtherBadStatusException
 #resilience4j:bulkhead
 resilience4j.bulkhead.instances.getPayment.max-concurrent-calls=20
 resilience4j.bulkhead.instances.getPayment.max-wait-duration=2s
@@ -56,4 +48,3 @@ resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.queue-capacity=
 resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.writable-stack-trace-enabled=true
 resilience4j.thread-pool-bulkhead.instances.getPaymentTHREADPOOL.keep-alive-duration=20ms
 #
-feign.circuitbreaker.enabled=true
